Theming de  la page maintenance et offline
Signed-off-by: webmasterpf-DG <webmaster@provence-formation.com>

--- a/css/maintenance.css
+++ b/css/maintenance.css
@@ -23,8 +23,8 @@
 }
 /*STYLE MAINTENANCE OFFLINE*/
 #name-and-slogan-offline, #site-slogan-offline{
-     background: #ADC91F;
-    color: #606070;
+     background: #93117E;
+    color: white;
     padding: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius:5px;
