DEV : pole metier, galerie au choix
Signed-off-by: webmasterpf-DG <webmaster@provence-formation.com>

--- a/css/global.css
+++ b/css/global.css
@@ -3,7 +3,7 @@
 *------------------------------------------------------*/
 
 /*------------------------------------------------*
- *---  Provence Formation Janv. 2010 --*
+ *---  Provence Formation Juin. 2010 --*
  *------------------------------------------------*/
 
 /**********STYLE POUR LES BLOCS*******************/
