--- a/css/layout-home.css
+++ b/css/layout-home.css
@@ -56,10 +56,9 @@ float:left;
 padding:4px;
 }
 
-#navPicto a {
-	border:0;
-	}
-#navPicto a :hover{}
+#navPicto a {border:0;font-family: arista,Trebuchet MS, sans-serif;
+text-align: center;color:#AEC81F;font-size: 23px;text-decoration: none;}
+#navPicto a:hover{color: #94127F;}
 /************PARTIE BASSE**************/
 #headBas{
 	width:990px;
