--- a/css/global.css
+++ b/css/global.css
@@ -19,7 +19,7 @@ a#retour_haut{
     text-align: right;
     float:right;
 }
-a:hover#retour_haut{
+a:hover #retour_haut{
     text-decoration: underline;
 }
 p{
@@ -84,12 +84,12 @@ padding: 5px;
 color:#d63e2a;
 text-decoration:none;
 }
-##ariane{
+/*#ariane{
     display: block;
     width: auto;
 background: white;
 }
-
+*/
 .breadcrumb a{
 color:#4e4d5e;
 text-decoration:none;
@@ -450,6 +450,13 @@ table#info-admin-hp{width: 460px;margin: 5px auto;}
 {width: 55%;margin: 0 auto; background:#C68DBD;padding: 5px;}
 #views-exposed-form-liste-actu-foyer-page-1 label,#views-exposed-form-liste-activites-lycee-block-2 label,#views-exposed-form-liste-activites-lycee-block-3 label
 {color: darkslategrey;text-align: center;}
+/*________ CLASSES DOCUMENTS ________*/
+.accordeon-classes{}
+.accordeon-classes table{width: auto;}
+.accordeon-classes tr{border-bottom: 1px solid #F29400;}
+.accordeon-classes tr:hover{background: gainsboro;}
+.accordeon-classes td{}
+.accordeon-classes{}
 /*********************************
 ----------------------------------
 ---- RESEAUX SOCIAUX Service links
